[gd_scene load_steps=44 format=2]

[ext_resource path="res://VarelaRound-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/four.gd" type="Script" id=2]
[ext_resource path="res://art/tile.png" type="Texture" id=3]
[ext_resource path="res://helperScenes/PurpleWalls.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/stone_grid.png" type="Texture" id=5]
[ext_resource path="res://art/stone_rough.png" type="Texture" id=6]
[ext_resource path="res://lava_anim/lava_tile4.png" type="Texture" id=7]
[ext_resource path="res://lava_anim/lava_tile6.png" type="Texture" id=8]
[ext_resource path="res://lava_anim/lava_tile1.png" type="Texture" id=9]
[ext_resource path="res://lava_anim/lava_tile2.png" type="Texture" id=10]
[ext_resource path="res://lava_anim/lava_tile5.png" type="Texture" id=11]
[ext_resource path="res://lava_anim/lava_tile3.png" type="Texture" id=12]
[ext_resource path="res://script/warp.gd" type="Script" id=13]
[ext_resource path="res://script/LavaTile.gd" type="Script" id=14]
[ext_resource path="res://player_anim/player10.png" type="Texture" id=15]
[ext_resource path="res://player_anim/player3.png" type="Texture" id=16]
[ext_resource path="res://script/movement.gd" type="Script" id=17]
[ext_resource path="res://player_anim/player7.png" type="Texture" id=18]
[ext_resource path="res://player_anim/player2.png" type="Texture" id=19]
[ext_resource path="res://player_anim/player4.png" type="Texture" id=20]
[ext_resource path="res://player_anim/player1.png" type="Texture" id=21]
[ext_resource path="res://art/light.png" type="Texture" id=22]
[ext_resource path="res://player_anim/player6.png" type="Texture" id=23]
[ext_resource path="res://player_anim/player9.png" type="Texture" id=24]
[ext_resource path="res://player_anim/player8.png" type="Texture" id=25]
[ext_resource path="res://script/GhostArea2D.gd" type="Script" id=26]
[ext_resource path="res://script/MoveGhost.gd" type="Script" id=27]
[ext_resource path="res://art/shadow.png" type="Texture" id=28]
[ext_resource path="res://art/ghost.png" type="Texture" id=29]
[ext_resource path="res://script/BadGhost.gd" type="Script" id=30]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="TileSet" id=3]
0/name = "stone_grid.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "stone_rough.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "close",
"speed": 2.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 8 ) ],
"loop": true,
"name": "open",
"speed": 2.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 8.0

[sub_resource type="CircleShape2D" id=6]
radius = 7.11073

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 18 ), ExtResource( 25 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 20 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 15 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="TileSet" id=8]
0/name = "tile.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=9]
radius = 8.0

[sub_resource type="DynamicFont" id=10]
size = 6
font_data = ExtResource( 1 )

[sub_resource type="CircleShape2D" id=11]
radius = 8.0

[sub_resource type="DynamicFont" id=12]
size = 6
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 24
font_data = ExtResource( 1 )

[node name="four" type="Node"]
script = ExtResource( 2 )

[node name="Warp" type="Node2D" parent="."]
position = Vector2( 80, 40 )
script = ExtResource( 13 )
sceneName = "res://levels/five.tscn"

[node name="Area1" type="Area2D" parent="Warp"]
position = Vector2( -8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Warp/Area1"]
shape = SubResource( 1 )

[node name="Area2" type="Area2D" parent="Warp"]
position = Vector2( -8, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Warp/Area2"]
shape = SubResource( 2 )

[node name="StoneTilemap" type="TileMap" parent="."]
modulate = Color( 0.611765, 0.611765, 0.611765, 1 )
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 1, 0, 65549, 0, 0, 65550, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 1, 0, 196617, 0, 0, 196618, 1, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 1, 0, 327685, 1, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 1, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 1, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 1, 0, 458766, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 589829, 1, 0, 589830, 1, 0, 589831, 0, 0, 589832, 0, 0, 589833, 1, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 655365, 1, 0, 655366, 1, 0, 655367, 0, 0, 655368, 0, 0, 655369, 1, 0, 655370, 0, 0, 655371, 0, 0, 655372, 1, 0, 655373, 0, 0, 655374, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0 )

[node name="PurpleWalls" parent="." instance=ExtResource( 4 )]

[node name="LavaTiles" type="Node2D" parent="."]

[node name="LavaTile" type="Node2D" parent="LavaTiles"]
position = Vector2( 200, 136 )
script = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="LavaTiles/LavaTile"]
frames = SubResource( 4 )
animation = "close"
frame = 5

[node name="Area2D" type="Area2D" parent="LavaTiles/LavaTile"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LavaTiles/LavaTile/Area2D"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="LavaTiles/LavaTile"]
wait_time = 3.0

[node name="LavaTile2" type="Node2D" parent="LavaTiles"]
position = Vector2( 216, 136 )
script = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="LavaTiles/LavaTile2"]
frames = SubResource( 4 )
animation = "close"
frame = 5

[node name="Area2D" type="Area2D" parent="LavaTiles/LavaTile2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LavaTiles/LavaTile2/Area2D"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="LavaTiles/LavaTile2"]
wait_time = 3.0

[node name="LavaTile3" type="Node2D" parent="LavaTiles"]
position = Vector2( 120, 72 )
script = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="LavaTiles/LavaTile3"]
frames = SubResource( 4 )
animation = "close"
frame = 5

[node name="Area2D" type="Area2D" parent="LavaTiles/LavaTile3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LavaTiles/LavaTile3/Area2D"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="LavaTiles/LavaTile3"]
wait_time = 3.0

[node name="LavaTile4" type="Node2D" parent="LavaTiles"]
position = Vector2( 120, 88 )
script = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="LavaTiles/LavaTile4"]
frames = SubResource( 4 )
animation = "close"
frame = 5

[node name="Area2D" type="Area2D" parent="LavaTiles/LavaTile4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LavaTiles/LavaTile4/Area2D"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="LavaTiles/LavaTile4"]
wait_time = 3.0

[node name="LavaTile5" type="Node2D" parent="LavaTiles"]
position = Vector2( 104, 104 )
script = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="LavaTiles/LavaTile5"]
frames = SubResource( 4 )
animation = "close"
frame = 5

[node name="Area2D" type="Area2D" parent="LavaTiles/LavaTile5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LavaTiles/LavaTile5/Area2D"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="LavaTiles/LavaTile5"]
wait_time = 3.0

[node name="LavaTile6" type="Node2D" parent="LavaTiles"]
position = Vector2( 120, 104 )
script = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="LavaTiles/LavaTile6"]
frames = SubResource( 4 )
animation = "close"
frame = 5

[node name="Area2D" type="Area2D" parent="LavaTiles/LavaTile6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LavaTiles/LavaTile6/Area2D"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="LavaTiles/LavaTile6"]
wait_time = 3.0

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 184, 168 )
script = ExtResource( 17 )

[node name="Light2D" type="Light2D" parent="player"]
visible = false
texture = ExtResource( 22 )
shadow_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="player"]
position = Vector2( 0, -12 )
frames = SubResource( 7 )
animation = "idle"
speed_scale = 0.5

[node name="Tween" type="Tween" parent="player"]

[node name="Walls" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.27451 )
tile_set = SubResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 65541, 0, 0, 65550, 0, 0, 131077, 0, 0, 131086, 0, 0, 196613, 0, 0, 196622, 0, 0, 262149, 0, 0, 262150, 0, 0, 262152, 0, 0, 262153, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 327685, 0, 0, 327689, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 393221, 0, 0, 393224, 0, 0, 393225, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 458757, 0, 0, 458760, 0, 0, 458766, 0, 0, 524293, 0, 0, 524298, 0, 0, 524299, 0, 0, 524302, 0, 0, 589829, 0, 0, 589834, 0, 0, 589838, 0, 0, 655365, 0, 0, 655370, 0, 0, 655374, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0 )

[node name="MoveGhost" type="Node2D" parent="."]
position = Vector2( 120, 24 )
script = ExtResource( 27 )
moveTime = 1

[node name="MoveLocation" type="Node2D" parent="MoveGhost"]
position = Vector2( 0, 32 )

[node name="Tween" type="Tween" parent="MoveGhost"]

[node name="Body" type="Node2D" parent="MoveGhost"]

[node name="GhostArea2D" type="Area2D" parent="MoveGhost/Body"]
script = ExtResource( 26 )

[node name="Ghost_CollisionShape2D" type="CollisionShape2D" parent="MoveGhost/Body/GhostArea2D"]
shape = SubResource( 9 )

[node name="Shadow" type="Sprite" parent="MoveGhost/Body"]
modulate = Color( 1, 1, 1, 0.313726 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 28 )

[node name="Ghost" type="Sprite" parent="MoveGhost/Body"]
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 0, -10 )
texture = ExtResource( 29 )

[node name="Symbol" type="Label" parent="MoveGhost/Body/Ghost"]
modulate = Color( 0.298039, 0.498039, 0.141176, 0.784314 )
margin_left = -8.0
margin_top = -5.0
margin_right = 8.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 10 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveGhost3" type="Node2D" parent="."]
position = Vector2( 200, 56 )
script = ExtResource( 27 )
moveTime = 2

[node name="MoveLocation" type="Node2D" parent="MoveGhost3"]
position = Vector2( 0, -32 )

[node name="Tween" type="Tween" parent="MoveGhost3"]

[node name="Body" type="Node2D" parent="MoveGhost3"]

[node name="GhostArea2D" type="Area2D" parent="MoveGhost3/Body"]
script = ExtResource( 26 )

[node name="Ghost_CollisionShape2D" type="CollisionShape2D" parent="MoveGhost3/Body/GhostArea2D"]
shape = SubResource( 9 )

[node name="Shadow" type="Sprite" parent="MoveGhost3/Body"]
modulate = Color( 1, 1, 1, 0.313726 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 28 )

[node name="Ghost" type="Sprite" parent="MoveGhost3/Body"]
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 0, -10 )
texture = ExtResource( 29 )

[node name="Symbol" type="Label" parent="MoveGhost3/Body/Ghost"]
modulate = Color( 0.298039, 0.498039, 0.141176, 0.784314 )
margin_left = -8.0
margin_top = -5.0
margin_right = 8.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 10 )
text = "3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveGhost2" type="Node2D" parent="."]
position = Vector2( 104, 168 )
script = ExtResource( 27 )
moveTime = 1

[node name="MoveLocation" type="Node2D" parent="MoveGhost2"]
position = Vector2( 48, 0 )

[node name="Tween" type="Tween" parent="MoveGhost2"]

[node name="Body" type="Node2D" parent="MoveGhost2"]

[node name="GhostArea2D" type="Area2D" parent="MoveGhost2/Body"]
script = ExtResource( 26 )

[node name="Ghost_CollisionShape2D" type="CollisionShape2D" parent="MoveGhost2/Body/GhostArea2D"]
shape = SubResource( 9 )

[node name="Shadow" type="Sprite" parent="MoveGhost2/Body"]
modulate = Color( 1, 1, 1, 0.313726 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 28 )

[node name="Ghost" type="Sprite" parent="MoveGhost2/Body"]
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 0, -10 )
texture = ExtResource( 29 )

[node name="Symbol" type="Label" parent="MoveGhost2/Body/Ghost"]
modulate = Color( 0.298039, 0.498039, 0.141176, 0.784314 )
margin_left = -8.0
margin_top = -5.0
margin_right = 8.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 10 )
text = "2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BadGhost" type="Node2D" parent="."]
position = Vector2( 120, 40 )
script = ExtResource( 30 )
moveTime = 1

[node name="MoveLocation" type="Node2D" parent="BadGhost"]
position = Vector2( 80, 0 )

[node name="Tween" type="Tween" parent="BadGhost"]

[node name="Body" type="Node2D" parent="BadGhost"]

[node name="GhostArea2D" type="Area2D" parent="BadGhost/Body"]
script = ExtResource( 26 )

[node name="Ghost_CollisionShape2D" type="CollisionShape2D" parent="BadGhost/Body/GhostArea2D"]
shape = SubResource( 11 )

[node name="Shadow" type="Sprite" parent="BadGhost/Body"]
modulate = Color( 1, 1, 1, 0.313726 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 28 )

[node name="Ghost" type="Sprite" parent="BadGhost/Body"]
modulate = Color( 0.988235, 0.2, 0.2, 0.823529 )
position = Vector2( 0, -10 )
texture = ExtResource( 29 )

[node name="Symbol" type="Label" parent="BadGhost/Body/Ghost"]
visible = false
modulate = Color( 0.298039, 0.498039, 0.141176, 0.784314 )
margin_left = -8.0
margin_top = -5.0
margin_right = 8.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 12 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BadGhost2" type="Node2D" parent="."]
position = Vector2( 168, 72 )
script = ExtResource( 30 )
moveTime = 1

[node name="MoveLocation" type="Node2D" parent="BadGhost2"]
position = Vector2( 0, 32 )

[node name="Tween" type="Tween" parent="BadGhost2"]

[node name="Body" type="Node2D" parent="BadGhost2"]

[node name="GhostArea2D" type="Area2D" parent="BadGhost2/Body"]
script = ExtResource( 26 )

[node name="Ghost_CollisionShape2D" type="CollisionShape2D" parent="BadGhost2/Body/GhostArea2D"]
shape = SubResource( 11 )

[node name="Shadow" type="Sprite" parent="BadGhost2/Body"]
modulate = Color( 1, 1, 1, 0.313726 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 28 )

[node name="Ghost" type="Sprite" parent="BadGhost2/Body"]
modulate = Color( 0.988235, 0.2, 0.2, 0.823529 )
position = Vector2( 0, -10 )
texture = ExtResource( 29 )

[node name="Symbol" type="Label" parent="BadGhost2/Body/Ghost"]
visible = false
modulate = Color( 0.298039, 0.498039, 0.141176, 0.784314 )
margin_left = -8.0
margin_top = -5.0
margin_right = 8.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 12 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 184.0
margin_right = 239.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 13 )
text = "Four"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Warp/Area1" to="Warp" method="_on_Area1_body_entered"]
[connection signal="body_entered" from="Warp/Area2" to="Warp" method="_on_Area2_body_entered"]
[connection signal="animation_finished" from="LavaTiles/LavaTile/AnimatedSprite" to="LavaTiles/LavaTile" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="LavaTiles/LavaTile/Area2D" to="LavaTiles/LavaTile" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="LavaTiles/LavaTile/Timer" to="LavaTiles/LavaTile" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="LavaTiles/LavaTile2/AnimatedSprite" to="LavaTiles/LavaTile2" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="LavaTiles/LavaTile2/Area2D" to="LavaTiles/LavaTile2" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="LavaTiles/LavaTile2/Timer" to="LavaTiles/LavaTile2" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="LavaTiles/LavaTile3/AnimatedSprite" to="LavaTiles/LavaTile3" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="LavaTiles/LavaTile3/Area2D" to="LavaTiles/LavaTile3" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="LavaTiles/LavaTile3/Timer" to="LavaTiles/LavaTile3" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="LavaTiles/LavaTile4/AnimatedSprite" to="LavaTiles/LavaTile4" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="LavaTiles/LavaTile4/Area2D" to="LavaTiles/LavaTile4" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="LavaTiles/LavaTile4/Timer" to="LavaTiles/LavaTile4" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="LavaTiles/LavaTile5/AnimatedSprite" to="LavaTiles/LavaTile5" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="LavaTiles/LavaTile5/Area2D" to="LavaTiles/LavaTile5" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="LavaTiles/LavaTile5/Timer" to="LavaTiles/LavaTile5" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="LavaTiles/LavaTile6/AnimatedSprite" to="LavaTiles/LavaTile6" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="LavaTiles/LavaTile6/Area2D" to="LavaTiles/LavaTile6" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="LavaTiles/LavaTile6/Timer" to="LavaTiles/LavaTile6" method="_on_Timer_timeout"]
[connection signal="tween_completed" from="player/Tween" to="player" method="_on_Tween_tween_completed"]
[connection signal="tween_all_completed" from="MoveGhost/Tween" to="MoveGhost" method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="MoveGhost/Body/GhostArea2D" to="MoveGhost/Body/GhostArea2D" method="_on_GhostArea2D_body_entered"]
[connection signal="tween_all_completed" from="MoveGhost3/Tween" to="MoveGhost3" method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="MoveGhost3/Body/GhostArea2D" to="MoveGhost3/Body/GhostArea2D" method="_on_GhostArea2D_body_entered"]
[connection signal="tween_all_completed" from="MoveGhost2/Tween" to="MoveGhost2" method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="MoveGhost2/Body/GhostArea2D" to="MoveGhost2/Body/GhostArea2D" method="_on_GhostArea2D_body_entered"]
[connection signal="tween_all_completed" from="BadGhost/Tween" to="BadGhost" method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="BadGhost/Body/GhostArea2D" to="BadGhost" method="_on_GhostArea2D_body_entered"]
[connection signal="tween_all_completed" from="BadGhost2/Tween" to="BadGhost2" method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="BadGhost2/Body/GhostArea2D" to="BadGhost2" method="_on_GhostArea2D_body_entered"]
